# uavf

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  ROS.html  coco_labels.txt  contributing.html  developers.html  drop-publisher.py  example.sh  example_images.sh  example_models.sh  generating-missions.html  genindex.html  getting_started.html  gnc  index.html  install.sh  install_auvsi_client.sh  interop  interop.py  mission.plan  objects.inv  odcl_node.py  overview.html  package.xml  planner  prepare_tests.sh  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  test-parsing.py  ugv-drop.py
.github/workflows/: main.yml
_sources/: ROS.rst.txt  developers.rst.txt  index.rst.txt
_sources/autoapi/: index.rst.txt
autoapi/: index.html
autoapi/uavfpy/: index.html
calibration/: cameraCalibration.py  capture.py  save2.npy  webCamParams.npy
catkin_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
config/: planner_settings.yaml
docs/: ROS.rst  conf.py  contributing.rst  developers.rst  documentation.rst  generating-missions.rst  getting_started.rst  index.rst  installation.rst  overview.rst
launch/: planner.launch
msg/: Color.msg  FlyZone.msg  FlyZoneArray.msg  GeoCylinder.msg  GeoCylinderArrayStamped.msg  GeoPolygon.msg  GeoPolygonStamped.msg  GeoSphere.msg  GeoSphereArrayStamped.msg  Mission.msg  Object.msg  ObjectNotification.msg  ObjectType.msg  Odlc.msg  Orientation.msg  Shape.msg  StationaryObstacles.msg  Teams.msg  TeamsArray.msg  Waypoints.msg
odcl/: Target.py  color.py  colors.py  drawer.py  geoLocation.py  inference.py  interpreter.py  multiInterpreter_pipeline.py  pipeline.py  ros2cv.py  seq_pipeline.py  target_localizer.py  threadingInterpreter.py  tile_image.py  vsutils.py
pathplanner/: .gitignore  LICENSE  README.md  boustrophedon_decomposition.py  discretize_demo.py  example.py  optimal_path.py  polygon_demo.py  prm.py  requirements.txt  rrt.py  sample_mission.py  setup.py  straightskel_demo.py  test.py  test2.py  workspace.code-workspace
pathplanner/docs/: Makefile  bcd.html  boustrophedon_decomposition.html  circle_transform.html  conf.py  index.rst  installation.rst  path_gen.html  sub_sweep.html
pathplanner/forge_pathplanner/: astar.py  bdc.py  mission.py  plots.py  prm.py  rrt.py  surface.py
pathplanner/p2/: astar.py  bcd.py  bdc.py  optimal_path.py  path.py  polygon.py  prm.py
pathplanner/path_planning/: bcd.py  circle_transform.py  grid_map_lib.py  path_gen.py  sub_sweep.py  utils.py
pathplanner/path_planning_depracated/: gen_polygon.py  grid_map_lib.py  path_gen.py  sub_sweep.py
pathplanner/pathplanner/: astar.py  bdc.py  polygon.py
pathplanner/polyskel/: polyskel.py  readme.md
pathplanner/src/: boustrophedon_decomposition.py
pathplanner/tests/: test_bdc.py  test_polygon.py
scripts/: interop.py
src/odcl/: color.py  inference.py  pipeline.py
srv/: MissionService.srv  WaypointPlan.srv
tests/: bboxCenterVisualizer.py  conftest.py  test_geoLocation.py  test_pipeline.py  tile_image_test.py
tests/coverage/: test_polygon.py
utilities/: offline_autopilot.py
utils/: constants.py  serdes.py  topic.py
utils/proto/: interop_api_pb2.py  (+1 more)
(+159 files in other folders)
