<?xml version="1.0"?>
<package format="2">
  <name>interop</name>
  <version>0.1.0</version>
  <description>The ROS-Interop client package that communicates with the interoperability server.</description>

  <maintainer email="arsenp@uci.edu">Arsen Petrosian</maintainer>
  <license>BSD</license>
  <url type="website">https://sites.uci.edu/uavforge</url>
  <author email="arsenp@uci.edu">Arsen Petrosian</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
