[metadata]
name = uavfpy
version = attr: uavfpy.__version__
author = Mike Sutherland, An Dang, & the UAV Forge Team
author_email = msutherl@uci.edu
url = https://uci-uav-forge.github.io/uavf/
description = "UCI UAV Forge's Software for the AUVSI Student Unmanned Aerial Systems competition"
long_description = file: README.md
long_description_content_type = text/markdown
keywords = object detection, uav, path planning
license  = MIT
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only

[options]
package_dir=
    =src
zip_safe = True
include_package_data = True
install_requires =
    rrtplanner
    tensorflow >= 2.8.0
    opencv-python >= 4.5
    networkx >= 2.6.3
    scipy >= 1.7
    matplotlib >= 3.3
    pytest >= 7.0
    scikit-learn >= 1.0
    tflite-runtime >= 2.5.0
    jupytext >= 1.13
    shapely >= 1.8
    pyproj >= 3.3
    cvxpy >= 1.1


[options.packages.find]
where=src


[options.extras_require]
notebook = 
    jupyter >= 1.0.0
dev = 
    black >= 22.3
    Sphinx >= 4.5
    sphinx-autoapi >= 1.8
    sphinx-rtd-theme >= 1.0